--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/person"
-        android:title="Home"/>
+        android:title="@string/home"/>
     <item
         android:id="@+id/home"
-        android:title="Log Out"/>
+        android:title="@string/log_out"/>
 </menu>
