Dashboard now diplays user's email prefix (chars before '@'). Display name set on user registration.

--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -11,6 +11,7 @@
     tools:context=".DashboardActivity">
 
     <TextView
+        android:id="@+id/user_details"
         android:text="[Name]'s Dashboard"
         android:textStyle="bold"
         android:textSize="30sp"
