--- a/app/src/main/res/layout/study_group.xml
+++ b/app/src/main/res/layout/study_group.xml
@@ -14,7 +14,7 @@
         android:id="@+id/scrollView"
         android:layout_above="@id/bottomNavigationView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -66,7 +66,7 @@
             <Button
                 android:id="@+id/createSessionButton"
                 android:text="@string/create_session"
-                android:layout_margin="10dp"
+                android:layout_marginBottom="20dp"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -76,6 +76,7 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:menu="@menu/study_group_nav" />
