--- a/app/src/main/res/menu/dashboard_nav.xml
+++ b/app/src/main/res/menu/dashboard_nav.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/groups"
+        android:id="@+id/courses"
         android:title="@string/courses"
         android:icon="@drawable/baseline_chat_24"/>
     <item
