--- a/app/src/main/res/layout/course_list.xml
+++ b/app/src/main/res/layout/course_list.xml
@@ -15,7 +15,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
-            android:layout_height="wrap_content">
+            android:layout_height="400dp">
             <TextView
                 android:text="@string/enrolled_courses"
                 android:layout_gravity="center_horizontal"
@@ -28,7 +28,7 @@
                 android:id="@+id/courseList"
                 android:layout_marginVertical="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="300dp"/>
 
         </LinearLayout>
     </ScrollView>
