--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -9,6 +9,7 @@
     android:gravity="center"
     android:padding="20dp"
     tools:context=".DashboardActivity">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -31,12 +32,12 @@
                 android:layout_width="match_parent"
                 android:orientation="vertical"
                 android:layout_weight="1"
-                android:layout_height="0dp">
+                android:layout_height="wrap_content">
 
                 <ListView
                     android:id="@+id/groupList"
                     android:layout_width="match_parent"
-                    android:layout_height="400dp" />
+                    android:layout_height="300dp" />
 
                 <LinearLayout
                     android:id="@+id/ButtonLayout"
