--- a/app/src/main/res/layout/study_group.xml
+++ b/app/src/main/res/layout/study_group.xml
@@ -60,11 +60,21 @@
 
             <ListView
                 android:id="@+id/sessionList"
-                android:layout_marginVertical="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"/>
+                android:layout_height="200dp"
+                android:layout_marginVertical="10dp" />
+
+            <Button
+                android:id="@+id/resources"
+                android:text="@string/resources"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
         </LinearLayout>
     </ScrollView>
+
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
