--- a/app/src/main/res/layout/resource.xml
+++ b/app/src/main/res/layout/resource.xml
@@ -22,30 +22,27 @@
             android:orientation="vertical">
 
             <TextView
-                android:text="[Course Name] Resources"
+                android:text="[Group Name] Resources"
                 android:layout_gravity="center_horizontal"
                 android:textStyle="bold"
                 android:textSize="30sp"
                 android:gravity="center"
-                android:layout_marginBottom="30dp"
+                android:layout_marginVertical="30dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
-            <TextView
-                android:text="@string/resources"
-                android:layout_gravity="center_horizontal"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:gravity="center"
-                android:layout_marginBottom="10dp"
+            <SearchView
+                android:id="@+id/searchView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:queryHint="Search resources"
+                android:iconifiedByDefault="true" />
 
             <ListView
                 android:id="@+id/resourceList"
                 android:layout_marginVertical="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="500dp"/>
+                android:layout_height="200dp"/>
 
             <Button
                 android:id="@+id/uploadResourceButton"
