--- a/app/src/main/res/layout/group_chat.xml
+++ b/app/src/main/res/layout/group_chat.xml
@@ -35,7 +35,7 @@
                 android:id="@+id/groupChatList"
                 android:layout_marginVertical="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="500dp"/>
 
         </LinearLayout>
     </ScrollView>
