--- a/app/src/main/res/layout/calendar.xml
+++ b/app/src/main/res/layout/calendar.xml
@@ -7,6 +7,18 @@
     android:layout_height="match_parent"
     tools:context=".CalendarActivity">
 
+    <TextView
+        android:text="Group Calendar"
+        android:id="@+id/calendarTitle"
+        android:layout_gravity="center_horizontal"
+        android:textStyle="bold"
+        android:layout_marginVertical="30dp"
+        android:textSize="30sp"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints" />
+
     <android.widget.CalendarView
         android:id="@+id/calendarView"
         android:layout_width="0dp"
