Groupchat confirmed works, join and leave classes works as intended.

--- a/app/src/main/res/layout/course_list.xml
+++ b/app/src/main/res/layout/course_list.xml
@@ -29,7 +29,14 @@
                 android:layout_marginVertical="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"/>
-
+            <Button
+                android:id="@+id/joinGroupButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:text="@string/join_class">
+            </Button>
         </LinearLayout>
     </ScrollView>
 
