--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -10,6 +10,13 @@
     android:padding="20dp"
     tools:context=".LoginActivity">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/logo"
+        android:src="@drawable/logo"
+        android:layout_marginVertical="50dp"/>
+
     <TextView
         android:text="@string/login"
         android:textStyle="bold"
