--- a/app/src/main/res/layout/resource.xml
+++ b/app/src/main/res/layout/resource.xml
@@ -22,7 +22,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:text="[Group Name] Resources"
+                android:text="Resources"
                 android:layout_gravity="center_horizontal"
                 android:textStyle="bold"
                 android:textSize="30sp"
