--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -13,7 +13,7 @@
     <ListView
         android:id="@+id/chatMessagesListView"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="700dp"
         android:layout_above="@id/messageInputLayout"
         android:divider="@android:color/transparent"
         android:dividerHeight="8dp" />
@@ -28,7 +28,7 @@
 
         <EditText
             android:id="@+id/editTextMessage"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_weight="1"
             android:background="@color/gray"
@@ -36,12 +36,34 @@
             android:padding="10dp"
             android:hint="Type a message" />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
         <Button
             android:id="@+id/buttonSend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="Send" />
+            android:text="Send"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginBottom="0dp"
+            />
+
+        <Button
+            android:id="@+id/buttonUpload"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="0dp"
+            android:layout_marginBottom="8dp"
+            android:text="Upload"
+            android:textSize="20sp"
+            />
+
+        </LinearLayout>
+
+
     </LinearLayout>
 
 </RelativeLayout>
